# hw-fastapi-1-nfactorial

./: README.md
fastapi/: README.md  pyproject.toml
server/: README.md  pyproject.toml
