[tool.poetry]
name = "fastapi-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.99.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
